# dpc

./: .gitignore  Cargo.toml  README.md  build.rs  log.txt
.github/workflows/: build.yml  release.yml
src/: base_dpc.rs  crc32.rs  fuel_dpc.rs  fuel_fmt.rs  lz.rs  main.rs
src/fuel_fmt/: animation.rs  binary.rs  bitmap.rs  camera.rs  collisionvol.rs  common.rs  fonts.rs  gameobj.rs  genworld.rs  gwroad.rs  lightdata.rs  lod.rs  loddata.rs  material.rs  materialanim.rs  materialobj.rs  mesh.rs  meshdata.rs  mod.rs  node.rs  omni.rs  particles.rs  particlesdata.rs  rotshape.rs  rotshapedata.rs  rtc.rs  skel.rs  skin.rs  sound.rs  spline.rs  splinegraph.rs  surface.rs  surfacedatas.rs  userdefine.rs  warp.rs  world.rs  worldref.rs
