[package]
name = "dpc"
version = "0.1.0"
authors = ["widberg <https://github.com/widberg>"]
build = "build.rs"
edition = "2018"

[dependencies]
binwrite = "0.2.1"
built = { version = "0.5.0", features = ["git2"] }
byteorder = "1.4.3"
checksums = "0.7.1"
clap = "2.33.3"
dialoguer = "0.8.0"
indicatif = "0.16.0"
itertools = "0.10.0"
nom = "6.1.2"
nom-derive = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3.7"
test-generator = "0.3.0"
wild = "2.0.4"

[build-dependencies]
built = "0.5.0"
