[package]
name = "dpc"
version = "0.1.5"
authors = ["widberg <https://github.com/widberg>"]
build = "build.rs"
edition = "2018"

[dependencies]
arcode = "0.2.3"
binwrite = "0.2.1"
bitbit = "0.2.0"
byteorder = "1.4.3"
checksumdir = "0.3.0"
checksums = "0.7.1"
clap = "2.33.3"
copy_dir = "0.1.2"
crc32fast = "1.2.1"
ddsfile = "0.4.0"
dialoguer = "0.8.0"
glob = "0.3.1"
git2 = "0.13.20"
hound = "3.4.0"
image = "0.23.14"
indicatif = "0.16.0"
itertools = "0.10.0"
lz4 = "1.23.2"
nom = "6.1.2"
nom-derive = "0.9.0"
nom-trace = "0.2.1"
num-traits = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3.7"
test-generator = "0.3.0"
wild = "2.0.4"
zerocopy = "0.5.0"

[build-dependencies]
built = { version = "0.5.1", features = ["git2"] }
